--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 .square{
-  height: 100px;
-  width: 100px;
+  height: 200px;
+  width: 200px;
   border: 2px solid black;
+}
+.gameboard{
+  display: flex;
+  width:620px;
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin: 0 auto;
 }
