--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   height: 200px;
   width: 200px;
   border: 2px solid black;
+  font-size: 100px;
+  text-align: center;
 }
 .gameboard{
   display: flex;
